# dms-moi-workspace/modules/moi-api-handler/moi-api-handler-impl/rest-openapi.yaml
@@ -233,6 +233,10 @@ paths:
           name: ModuleType
           schema:
             type: string
+        - in: query
+          name: ConsumerCode
+          schema:
+            type: string
       requestBody:
                 content:
                     multipart/form-data:
